@@ -30,6 +30,7 @@
 19. Try to use better text for buttons in dialogs, and not just yes/no.
 20. Dont use icons in buttons when using QGtkStyle - Gtk does not use button
     icons.
+21. Use checkboxes in sync dialog to mark songs to be copied.
 
 1.0.3
 -----
